# storage/api-docs/api-docs.json
@@ -2,11 +2,7 @@
     "openapi": "3.0.0",
     "info": {
         "title": "API E-Commerce Sederhana — UTP TIS",
-        "description": "Backend API sederhana untuk e-commerce menggunakan Laravel dengan mock data JSON (non-database). Dibuat untuk tugas UTP mata kuliah Teknologi Integrasi Sistem.",
-        "contact": {
-            "name": "Alfi Perdiansyah Putra",
-            "email": "245150701111028@student.ub.ac.id"
-        },
+        "description": "Dibuat untuk UTP Teknologi Integrasi Sistem",
         "version": "1.0.0"
     },
     "servers": [
